# mlua-gen

./: Cargo.toml  README.md  ROADMAP.md  justfile  rustfmt.toml
mlua-gen/: Cargo.toml  helpers.lua
mlua-gen-macros/: Cargo.toml
mlua-gen-macros/src/: attr.rs  builder.rs  enum.rs  lib.rs  project.rs  shared.rs  struct.rs
mlua-gen-new/: Cargo.toml
mlua-gen-new/src/: attr.rs  builder.rs  enum.rs  lib.rs  struct.rs
mlua-gen/src/: lib.rs  proxy.rs  trait_helpers.rs
mlua-gen/tests/: basic_enum.lua  basic_enum.rs  basic_struct.lua  basic_struct.rs  collection_visibility.lua  collection_visibility.rs  custom_enum.lua  custom_enum.rs  custom_struct.lua  custom_struct.rs  deep_nesting.lua  deep_nesting.rs  doc.lua  doc.rs  enum_as_arg.lua  enum_as_arg.rs  enum_deep_nesting.lua  enum_deep_nesting.rs  enum_in_place_named.lua  enum_in_place_named.rs  enum_in_place_unnamed.lua  enum_in_place_unnamed.rs  enum_in_struct.lua  enum_in_struct.rs  enum_variant_changed.lua  enum_variant_changed.rs  function_of_struct.lua  function_of_struct.rs  generic_enum.lua  generic_enum.rs  generic_struct.lua  generic_struct.rs  hashmap_of_mlua_gen.lua  hashmap_of_mlua_gen.rs  index_one_based.lua  index_one_based.rs  lua_constructed_nested.lua  lua_constructed_nested.rs  modify_underlying_struct.lua  modify_underlying_struct.rs  (+22 more)
src/: attr.rs  enum.rs  lib.rs  shared.rs  struct.rs
tests/: basic_enum.lua  basic_enum.rs  basic_struct.lua  basic_struct.rs  custom_enum.lua  custom_enum.rs  custom_struct.lua  custom_struct.rs  doc.lua  doc.rs  generic_struct.lua  unnamed_struct.lua  unnamed_struct.rs
