[package]
    authors = ["tkr-sh"]
    description = "Generates code to easily use Rust's structs or enums in Lua with mlua"
    edition = "2024"
    exclude = ["LICENSE.md"]
    license = "LGPL-3.0-or-later"
    name = "mlua-gen-macros"
    readme = "../README.md"
    repository = "https://github.com/tkr-sh/mlua-gen"
    version = "0.2.1"

[features]
    debug = []

[dependencies]
    proc-macro2 = "1.0"
    quote = "1.0"
    syn = { version = "2.0", features = ["extra-traits", "full"] }

[dev-dependencies]
    mlua = { version = "0.10", features = ["lua54"] }

[lib]
    proc-macro = true

[lints]
    workspace = true
