[package]
name = "mlua-gen"
version = "0.2.0"
edition = "2021"
authors = ["tkr-sh"]
license = "LGPL-3.0-or-later"
description = "Generates code to easily use Rust's structs or enums in Lua with mlua"
repository = "https://github.com/tkr-sh/mlua-gen"
readme = "README.md"
exclude = ["LICENSE.md"]

[features]
debug = []

[dependencies]
mlua-gen-macros.workspace = true
mlua.workspace = true
