[package]
    authors = ["tkr-sh"]
    description = "Generates code to easily use Rust's structs or enums in Lua with mlua"
    edition = "2024"
    exclude = ["LICENSE.md", "justfile"]
    license = "LGPL-3.0-or-later"
    name = "mlua-gen"
    readme = "../README.md"
    repository = "https://github.com/tkr-sh/mlua-gen"
    version = "0.2.1"

[features]
    debug = []

[dependencies]
    mlua.workspace = true
    mlua-gen-macros.workspace = true

[lints]
    workspace = true
